--- a/package.json
+++ b/package.json
@@ -11,33 +11,32 @@
 		"codemirror": "^5.58.2",
 		"core-js": "^3.6.5",
 		"firebase": "^7.24.0",
-		"firebaseui": "^4.7.0",
 		"humanize-duration": "^3.24.0",
 		"js-yaml": "^3.14.0",
 		"parse-duration": "^0.4.4",
 		"vue": "^2.6.12",
 		"vue-codemirror": "^4.0.6",
 		"vue-router": "^3.4.7",
-		"vue-sweetalert2": "^3.0.8",
+		"vue-sweetalert2": "^4.1.1",
 		"vuex": "^3.5.1"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^2.34.0",
-		"@typescript-eslint/parser": "^2.34.0",
-		"@vue/cli-plugin-babel": "~4.2.0",
-		"@vue/cli-plugin-eslint": "~4.2.0",
-		"@vue/cli-plugin-router": "~4.2.0",
-		"@vue/cli-plugin-typescript": "~4.2.0",
-		"@vue/cli-plugin-vuex": "~4.2.0",
-		"@vue/cli-service": "~4.2.0",
-		"@vue/eslint-config-typescript": "^5.1.0",
-		"axios": "^0.18.0",
-		"eslint": "^6.7.2",
-		"eslint-plugin-vue": "^6.1.2",
+		"@typescript-eslint/eslint-plugin": "^4.5.0",
+		"@typescript-eslint/parser": "^4.5.0",
+		"@vue/cli-plugin-babel": "^4.5.8",
+		"@vue/cli-plugin-eslint": "^4.5.8",
+		"@vue/cli-plugin-router": "^4.5.8",
+		"@vue/cli-plugin-typescript": "^4.5.8",
+		"@vue/cli-plugin-vuex": "^4.5.8",
+		"@vue/cli-service": "^4.5.8",
+		"@vue/eslint-config-typescript": "^7.0.0",
+		"axios": "^0.21.0",
+		"eslint": "^7.12.0",
+		"eslint-plugin-vue": "^7.1.0",
 		"sass": "^1.27.0",
-		"sass-loader": "^8.0.2",
-		"typescript": "~3.7.5",
-		"vue-cli-plugin-axios": "0.0.4",
+		"sass-loader": "^10.0.4",
+		"typescript": "^4.0.3",
+		"vue-cli-plugin-axios": "^0.0.4",
 		"vue-template-compiler": "^2.6.12"
 	},
 	"eslintConfig": {
