completely rebuilt with quasar
Signed-off-by: Alessandro Contenti <a.contenti@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,10 @@
 {
+	"extends": "@quasar/app/tsconfig-preset",
 	"compilerOptions": {
-		"target": "esnext",
-		"module": "esnext",
-		"strict": true,
-		"jsx": "preserve",
-		"importHelpers": true,
-		"moduleResolution": "node",
-		"esModuleInterop": true,
-		"allowSyntheticDefaultImports": true,
-		"sourceMap": true,
 		"baseUrl": ".",
-		"types": [
-			"webpack-env",
-			"vue-sweetalert2"
-		],
-		"paths": {
-			"@/*": [
-				"src/*"
-			]
-		},
-		"lib": [
-			"esnext",
-			"dom",
-			"dom.iterable",
-			"scripthost"
+		"experimentalDecorators": true,
+		"typeRoots": [
+			"src/shims-codemirror.d.ts"
 		]
-	},
-	"include": [
-		"src/**/*.ts",
-		"src/**/*.tsx",
-		"src/**/*.vue",
-		"tests/**/*.ts",
-		"tests/**/*.tsx"
-	],
-	"exclude": [
-		"node_modules"
-	]
+	}
 }
