--- a/package.json
+++ b/package.json
@@ -1,63 +1,52 @@
 {
 	"name": "yacl-web",
-	"version": "0.2.1",
+	"version": "0.0.1",
+	"description": "Yet Another Cookbook Language",
+	"productName": "YACL",
+	"author": "Alessandro Contenti <a.contenti@gmail.com>",
 	"private": true,
 	"scripts": {
-		"serve": "vue-cli-service serve --port 8088",
-		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
+		"dev": "quasar dev",
+		"build": "quasar build",
+		"deploy": "firebase deploy"
 	},
 	"dependencies": {
-		"codemirror": "^5.58.2",
+		"@quasar/extras": "^1.0.0",
+		"axios": "^0.18.1",
+		"codemirror": "^5.59.0",
 		"core-js": "^3.6.5",
-		"firebase": "^7.24.0",
-		"humanize-duration": "^3.24.0",
+		"firebase": "^8.2.1",
+		"humanize-duration": "^3.25.0",
 		"js-yaml": "^3.14.0",
 		"parse-duration": "^0.4.4",
-		"vue": "^2.6.12",
+		"portal-vue": "^2.1.7",
+		"quasar": "^1.0.0",
+		"vue-class-component": "^7.2.2",
 		"vue-codemirror": "^4.0.6",
-		"vue-router": "^3.4.7",
-		"vue-sweetalert2": "^4.1.1",
-		"vuex": "^3.5.1"
+		"vue-i18n": "^8.0.0",
+		"vue-property-decorator": "^8.3.0"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^4.5.0",
-		"@typescript-eslint/parser": "^4.5.0",
-		"@vue/cli-plugin-babel": "^4.5.8",
-		"@vue/cli-plugin-eslint": "^4.5.8",
-		"@vue/cli-plugin-router": "^4.5.8",
-		"@vue/cli-plugin-typescript": "^4.5.8",
-		"@vue/cli-plugin-vuex": "^4.5.8",
-		"@vue/cli-service": "^4.5.8",
-		"@vue/eslint-config-typescript": "^7.0.0",
-		"axios": "^0.21.0",
-		"eslint": "^7.12.0",
-		"eslint-plugin-vue": "^7.1.0",
-		"sass": "^1.27.0",
-		"sass-loader": "^10.0.4",
-		"typescript": "^4.0.3",
-		"vue-cli-plugin-axios": "^0.0.4",
-		"vue-template-compiler": "^2.6.12"
-	},
-	"eslintConfig": {
-		"root": true,
-		"env": {
-			"node": true
-		},
-		"extends": [
-			"plugin:vue/essential",
-			"eslint:recommended",
-			"@vue/typescript/recommended"
-		],
-		"parserOptions": {
-			"ecmaVersion": 2020
-		},
-		"rules": {
-			"no-mixed-spaces-and-tabs": "off"
-		}
+		"@quasar/app": "^2.0.0",
+		"@types/codemirror": "^0.0.103",
+		"@types/humanize-duration": "^3.18.1",
+		"@types/js-yaml": "^3.12.5",
+		"@types/node": "^10.17.15"
 	},
 	"browserslist": [
-		"> 1%",
-		"last 2 versions"
-	]
+		"last 10 Chrome versions",
+		"last 10 Firefox versions",
+		"last 4 Edge versions",
+		"last 7 Safari versions",
+		"last 8 Android versions",
+		"last 8 ChromeAndroid versions",
+		"last 8 FirefoxAndroid versions",
+		"last 10 iOS versions",
+		"last 5 Opera versions"
+	],
+	"engines": {
+		"node": ">= 10.18.1",
+		"npm": ">= 6.13.4",
+		"yarn": ">= 1.21.1"
+	}
 }
