--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
 	"scripts": {
 		"dev": "quasar dev",
 		"build": "quasar build",
+		"dev:electron": "quasar dev -m electron",
+		"build:electron": "quasar build -m electron",
 		"deploy": "firebase deploy"
 	},
 	"dependencies": {
 		"@quasar/extras": "^1.0.0",
+		"autolinker": "^3.14.2",
 		"axios": "^0.18.1",
 		"codemirror": "^5.59.0",
 		"core-js": "^3.6.5",
@@ -31,7 +34,10 @@
 		"@types/codemirror": "^0.0.103",
 		"@types/humanize-duration": "^3.18.1",
 		"@types/js-yaml": "^3.12.5",
-		"@types/node": "^10.17.15"
+		"devtron": "^1.4.0",
+		"electron": "^9.0.0",
+		"electron-debug": "^3.0.1",
+		"electron-devtools-installer": "^3.0.0"
 	},
 	"browserslist": [
 		"last 10 Chrome versions",
